--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-image: url(assets/bg.jpg);
+  background-image: url("/Weather-app/assets/bg.jpg");
   width: 100%;
   height: 100vh;
   background-size: cover;
